# sff

./: .gitignore  README.md  THEORY.md  design.md
docs/: FINDINGS.md  INFO_BOUND.md  RELATED_WORK.md
docs/ideas/: 2026-06-04-ff-bp-hybrid.md  2026-06-04-ff-generative-ebm.md
docs/superpowers/plans/: 2026-06-02-skip-connections-scff.md  2026-06-03-cuda-scff-gpu.md  2026-06-03-spatial-scff.md  2026-06-04-gen-ff.md  2026-06-04-genff-conv-gpu.md  2026-06-04-principled-hybrid.md
docs/superpowers/specs/: 2026-06-02-skip-connections-scff-design.md  2026-06-03-cuda-scff-gpu-design.md  2026-06-03-spatial-scff-design.md  2026-06-04-gen-ff-design.md  2026-06-04-genff-conv-gpu-design.md  (+1 more)
empirical/: .envrc  arch.py  auxdepth.py  convarch.py  fisher.py  genff.py  genff_conv.py  gpu_arch.py  gpu_pipeline.py  gradients.py  metrics.py  model.py  pc.py  pyproject.toml  scff.py
empirical/cuda/: api.py  reference.py  scff_ext.py  scff_signal.cu
empirical/experiments/: bench_kernel.out  bench_kernel.py  cifar_conv.py  cifar_spatial.out  cifar_spatial.py  cifar_spatial_xim.out  depth_scaling.py  diag_tension.py  e1_init_scaling.py  e2_dynamics.py  e2_fisher.py  e2_probe.py  e3_batch_width.py  e_arch_depth.py  e_auxdepth.py  e_dendritic.py  e_dfa_scff.py  e_layernorm.py  e_residual_alpha.py  fg_hybrid_train.py  fg_subspace.py  genff_cifar.out  genff_cifar.py  genff_mnist.out  genff_mnist.py  gpu_depth_stress.out  gpu_depth_stress.py  grad_decomp.py  iso_penalty.py  memory_footprint.py  multiseed.py  objective_lever.py  pc_alignment.py  task_accuracy.py
empirical/tests/: test_arch.py  test_auxdepth.py  test_genff.py  test_genff_conv.py  test_gradients.py  test_pc.py  test_scff_kernel.py
lean/: LEAN_NOTES.md  SffProof.lean  lake-manifest.json  lakefile.toml
lean/SffProof/: Defs.lean  Hypotheses.lean  InfoBound.lean  Main.lean  Normalization.lean  Residual.lean  Skeleton.lean  Softmax.lean
lean/scripts/: check_no_sorry.sh
(+3 files in other folders)
