[project]
name = "sff-empirical"
version = "0.1.0"
description = "SCFF / NGD-FF empirical track (Track E): gradient-alignment dynamics"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "pyyaml",
    "pytest",
    "scikit-learn>=1.7.2",
    "torchvision>=0.27.0",
]

[tool.uv]
# CPU-only torch (sizes here are CPU-fine; CUDA optional, see design.md 2.4)
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
