[project]
name = "sff-empirical"
version = "0.1.0"
description = "SCFF / NGD-FF empirical track (Track E): gradient-alignment dynamics"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "pyyaml",
    "pytest",
    "scikit-learn>=1.7.2",
]

[tool.uv]
# CUDA (cu128) torch for RTX 5090 / sm_120 (see design.md 2.4)
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
